# Mini-Music-Player

./: CMakeLists.txt
src/: main.cpp
src/include/: Converter.hpp  Loader.hpp  OpenAL.h  Song.hpp
